--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ var url = data['src'];
       t++;
       
       if (t == 1) {
-        window.location.replace('https://www.sabornamesa.com.br/?' + query);
+        window.location.replace('https://www.sabornamesa.com.br/receitas/?' + query);
       }
     }
 
@@ -211,6 +211,7 @@ var url = data['src'];
 
 
 </html>
+
 
 
 
